# asuntoanalyysi_2

./: .dockerignore  .gitignore  .npmrc  Dockerfile  Dockerfile.prod  Procfile  README.env  README.md  README_OAUTH.md  README_PAYTRAIL.md  README_PDF_EXTRACT.md  README_SUBSCRIPTIONS.md  add_paytrail_product.py  add_product_id_column.py  api_call.py  app.py  auth.py  build.sh  check_and_fix_subscriptions.py  config.py  create_admin.py  create_kohteet_table.py  create_risk_analyses_table.py  direct_admin.py  docker-compose.yml  email_service.py  etuovi_downloader.py  fix_empty_analysis.py  fix_risk_data_encoding.py  forms.py  gunicorn_config.py  info_extract.py  info_extract_etuovi.py  kat_api_call.py  migrate_db.py  migrate_user_table.py  mock_test_subscription.py  models.py  oauth.py  oikotie_downloader.py  (+31 more)
etuovi_pipeline/: README.md  __init__.py  etuovi_dockling.py  etuovi_downloader.py  etuovi_pipeline.py  test_pipeline.py
migrations/: README  README.md  add_neliot_huoneet.py  alembic.ini  direct_payment_system.py  env.py  manage_migrations.py  payment_system.py
old_files/: info_extract_oikotie.py.bak
public/: index.html  manifest.json
scripts/: check_oauth_redirect.py
src/: App.js  index.css  index.js
templates/: analyses.html  analysis.html  base.html  base_authenticated.html  checkout.html  debug_logs.html  debug_paytrail.html  error.html  index.html  kayttoehdot.txt  landing.html  login.html  my_subscription.html  palvelu.html  products.html  profile.html  prompt_1 22-4-25_1.txt  register.html  resend_verification.html  results.html  welcome.html  (+1 more)
(+46 files in other folders)
