[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asuntoanalyysi"
version = "1.0.0"
description = "Asuntoanalyysi-sovellus"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "flask>=2.3.3",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "openai>=1.75.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.9",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Login>=0.6.3",
    "Flask-WTF>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=4.0.0",
] 